--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tea-app",
-  "version": "1.0.0",
+  "version": "Anji-Bai-Cha",
   "description": "",
   "main": "app.js",
   "dependencies": {
@@ -10,7 +10,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": app.js
   },
   "author": "michał bargiel",
   "license": "ISC"
