added header and footer

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tea-app",
-  "version": "Anji-Bai-Cha",
+  "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "dependencies": {
