--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "mongoose": "^5.4.5"
   },
   "devDependencies": {},
