--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
   },
-  "devDependencies": {},
+  "engines": {
+    "node": "6.11.2" 
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "app.js"
+    "start": "node app.js"
   },
   "author": "michał bargiel",
   "license": "ISC"
